# note-rs

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: main.rs
