[package]
name = "note-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
home = "0.5.4"

[profile.release]
opt-level = 3

[[bin]]
name = "note"
path = "src/main.rs"

